<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context=".PassengerConfirmation">

    <Button
        android:id="@+id/buttonMines"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_corners_registerbtn"
        android:text="-"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/timeText" />

    <Button
        android:id="@+id/buttonPayAndStart"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="81dp"
        android:background="@drawable/rounded_corners_greenbg"
        android:text="@string/pay_and_start_journy"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TotalbusfareText" />

    <Button
        android:id="@+id/buttonPluse"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_corners_registerbtn"
        android:text="@string/pluse"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/seatcountText"
        app:layout_constraintTop_toBottomOf="@+id/timeText" />

    <Button
        android:id="@+id/buttonPayCash"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="81dp"
        android:background="@drawable/rounded_corners_registerbtn"
        android:text="@string/pay_by_cash"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorText" />

    <TextView
        android:id="@+id/routeText"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="27dp"
        android:text="@string/kadawatha_matara"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeTypeTxt" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="84dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/bus_no"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeText" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="107dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/start_time"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="107dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/seat_count"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="107dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/bus_fare"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMines" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="38dp"
        android:text="@string/sorry_your_account_balance_is_low_please_recharge_the_account"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPayAndStart" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/x"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/seatcountTextFinal"
        app:layout_constraintTop_toBottomOf="@+id/buttonMines" />

    <TextView
        android:id="@+id/registerNoText"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="NG - 7070"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/routeText" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/_10_30_am"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/registerNoText" />

    <TextView
        android:id="@+id/seatcountText"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="15dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/buttonMines"
        app:layout_constraintTop_toBottomOf="@+id/timeText" />

    <TextView
        android:id="@+id/seatcountTextFinal"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/buttonMines" />

    <TextView
        android:id="@+id/busfareText"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="12dp"
        android:text="0"
        android:textAlignment="textStart"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/buttonPluse" />

    <TextView
        android:id="@+id/TotalbusfareText"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="12dp"
        android:text="0"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/routeTypeTxt"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="27dp"
        android:text="@string/express_way"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>